# subFlow

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
UnitTests/: CMakeLists.txt  test_main.cpp
UnitTests/TestDFNIMRS/: CMakeLists.txt  TestDFNIMRS.cpp  log4cxx.cfg
UnitTests/TestFlemischCtePressure/: CMakeLists.txt  TestFlemischCtePressure.cpp
UnitTests/TestFracIntersect3D/: CMakeLists.txt  TestFracIntersect3D.cpp
UnitTests/TestFracIntersect3DMortar/: CMakeLists.txt  TestFracIntersect3DMortar.cpp
UnitTests/TestNoFrac4Spaces/: CMakeLists.txt  TestNoFrac4Spaces.cpp
UnitTests/TestOneFracture/: CMakeLists.txt  TestOneFrac.cpp
UnitTests/TestOnlyFracIntersec/: CMakeLists.txt  TestOnlyFracIntersec.cpp
docs/: Formulation.lyx  Formulation.lyx~  subFlow_Documentation.tex
input/: comparison-flux-velocity.json  module-deep-filtration.json  module-gravity-segregation.geo  module-gravity-segregation.json  module-gravity-segregation.msh  module-radial-filtration-s0-step-180.txt  module-radial-filtration-s0-step-3000.txt  module-radial-filtration-s0.txt  module-radial-filtration-sol0-step-180.txt  module-radial-filtration-sol0-step-3000.txt  module-radial-filtration-sol0.txt  module-radial-filtration.json  module-vacuum.json  module.geo  module.msh  radial-filtration-3d.geo  radial-filtration-3d.json  radial-filtration-3d.msh  radial-filtration.geo  radial-filtration.json  radial-filtration.msh  test-carter-filtercake.geo  test-carter-filtercake.json  test-carter-filtercake.msh  test-darcy.json  test-gravity-segregation.geo  test-gravity-segregation.json  test-gravity-segregation.msh  test-transport.geo  test-transport.json  test-transport.msh  test-unsaturated-reservoir-vacuum.geo  test-unsaturated-reservoir-vacuum.json  test-unsaturated-reservoir-vacuum.msh  three-layers.geo  three-layers.json  three-layers.msh
src/: CMakeLists.txt  Interpol3RelPerm.cpp  TMRSApproxSpaceGenerator.cpp  TMRSApproxSpaceGenerator.h  TMRSDarcyFlowWithMem.cpp  TMRSDarcyFlowWithMem.h  TMRSDarcyFlowWithMem_impl.h  TMRSDarcyFractureFlowWithMem.cpp  TMRSDarcyFractureFlowWithMem.h  TMRSDarcyFractureFlowWithMem_impl.h  TMRSDarcyFractureGlueFlowWithMem.cpp  TMRSDarcyFractureGlueFlowWithMem.h  TMRSDarcyMemory.cpp  TMRSDarcyMemory.h  TMRSDataTransfer.cpp  TMRSDataTransfer.h  TMRSMemory.cpp  TMRSMemory.h  TMRSMixedAnalysis.cpp  TMRSMixedAnalysis.h  TMRSMultiphaseFlow.cpp  TMRSMultiphaseFlow.h  TMRSMultiphaseFlow_impl.h  TMRSPropertiesFunctions.h  TMRSSFIAnalysis.cpp  TMRSSFIAnalysis.h  TMRSSavable.cpp  TMRSSavable.h  TMRSTransportAnalysis.cpp  TMRSTransportAnalysis.h  TMRSTransportMemory.cpp  TMRSTransportMemory.h  TPZAlgebraicDataTransfer.cpp  TPZAlgebraicDataTransfer.h  TPZAlgebraicTransport.cpp  TPZAlgebraicTransport.h  TPZAnalysisAuxEigen.cpp  TPZAnalysisAuxEigen.h  TPZDarcyFlowWithMem.cpp  TPZDarcyFlowWithMem.h  (+62 more)
src/cmake/: FindSuperLU.cmake
targets/: CMakeLists.txt  module-deep-filtration.cpp  module-gravity-segregation.cpp  module-radial-filtration.cpp  module-vacuum.cpp  radial-filtration-3d.cpp  radial-filtration.cpp  test-carter-filtercake.cpp  test-darcy.cpp  test-gravity-segregation.cpp  test-transport.cpp  test-unsaturated-reservoir-vacuum.cpp  three-layers.cpp
targets/Filling/: CMakeLists.txt  TMRSWaterInjectionBC.cpp  TMRSWaterInjectionBC.h  filling.cpp  log4cxx.cfg  module.geo  module.json  module.msh  radial-filtration.json  random-bubbles.geo  random-bubbles.json  random-bubbles.msh  test-1d-filling.json  test-1d-mathematica.geo  test-1d-mathematica.json  test-1d-mathematica.msh  test-1d-vacuum.geo  test-1d-vacuum.json  test-1d-vacuum.msh  test-gravity-segregation.json  three-layers.geo  three-layers.json  three-layers.msh  upward-flux.geo  upward-flux.json  upward-flux.msh
